serialnmea plugin construction connect() error fix

serialnmea QIOPipePrivate initialization accessed QIOPipe via
q_ptr before the object was constructed.

[ChangeLog][QtPositioning][serialnmea plugin]
Fixed serialnmea plugin initialization when used with serial port.

Fixes: QTBUG-82819
Change-Id: I3ff2de381a124f6b25f19327a39f1b001ef4899a
Reviewed-by: Paolo Angelelli <paolo.angelelli.qt@gmail.com>